Fixing element borders and spacing
Should address scrolling up/down

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,8 @@
 body{
     height:100%;
     background-color:#D2CD64;
+    width:100%;
+    overflow:hidden;
 }
 
 .menuDescription{
@@ -30,7 +32,7 @@ body{
 
 
 .hiddenMenus{
-    height:90%;
+    height:80%;
     width:10%;
     left:15%;
     top:5%;
@@ -45,7 +47,7 @@ body{
 }
 
 .visibleMenus{
-    height:90%;
+    height:80%;
     width:10%;
     left:5%;
     top:5%;
@@ -62,7 +64,7 @@ body{
 }
 
 .hiddenItems{
-    height:90%;
+    height:80%;
     width:10%;
     left:15%;
     top:5%;
@@ -77,7 +79,7 @@ body{
 }
 
 .visibleItems{
-    height:90%;
+    height:80%;
     width:10%;
     left:5%;
     top:5%;
@@ -93,7 +95,7 @@ body{
 }
 
 .visibleFAQs{
-    height:90%;
+    height:80%;
     width:9%;
     left:85%;
     top:5%;
